    changed by user/programmer. 
  
  * support for RGB images. RGB values are displayed in message toolbar.
  
  * class *FITSimage*: improved versions of header2classic() and
    reproject_to() methods;
    new slice2world method prints information about
    slice positions (annotate 2d maps from a 3d data cube).

* Module mplutil:

  * work-around for missing 'pageup' and 'pagedown' keys in matplotlib's
    Qt4Agg backend.

* Module positions:

  * units 1/...  and /...  also recognized.  Can be used for spectral
    translations that transform to e.g.  AWAV. 

* Module shapes:

  * messages for toolbar improved.
  
  * changed conversion routine to support shapes on maps with only one
    spatial axis (e.g.  position-velocity maps).
    
  * GUI improved.
  
  * Improved writing shape data to file.

* Module wcsgrat:

  * fixed bug with precision in seconds.
  
* New module profiles:

  * added function *gauest()* for estimating gaussian components in
    a profile. These estimates can e.g. subsequently be used as initial
    estimates for a least squares fit.

* WCSLIB: changed to version 4.6 (from 4.5)


Version 2.0.2 (Sep 16, 2010)
============================

* Class wcs.Projection:

  * allow for FITS headers that incorrectly represent EQUINOX as a string

  * added support for AIPS keyword VELREF

* Function mplutil.gipsy_connect() connects GIPSY keyword events
  to Matplotlib event loop.

* Added Microsoft Windows support.


Version 2.0.1 (Aug 11, 2010)
============================

* WCSLIB 4.5 included in distribution so
  it does not need to be separately installed anymore.

Version 2.0 (Jul 16, 2010)
==========================

* Class wcs.Projection:

  * added method *inside()*.

Version 1.9.2 (Jul 12, 2010)
============================

* Function wcs.coordmap(): added arguments *dst_shape*, *dst_offset*
  and *src_offset*.

* Class wcs.Projection:

  * fixed bug in class WrappedHeader.
